--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,12 @@ name = P5getservbyname
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/P5getservbyname.pm6
+filename = lib/P5getservbyname.rakumod
 
 [PruneFiles]
 ; match = ^ 'xt/'
+
+[Badges]
+provider = github-actions/test
+
+[UploadToZef]
